@@ -3,23 +3,16 @@ on 'runtime' => sub {
     requires 'strict';
     requires 'warnings';
     requires 'base';
-    requires 'Alien::Base' => '1.00';
+    requires 'Alien::Base' => '2.11';
 };
 
 on 'build' => sub {
-    requires 'Alien::Build' => '1.00';
+    requires 'Alien::Build' => '2.11';
     requires 'Alien::Build::Plugin::Build::Make';
+    requires 'Alien::Build::Plugin::Probe::Vcpkg' => '2.11';
     requires 'Config';
     requires 'ExtUtils::MakeMaker';
     requires 'IPC::Cmd';
-#    if ($^O eq 'MSWin32') {
-#        requires 'Alien::Build::Plugin::Build::CMake';
-#        requires 'Alien::cmake3';
-#        requires 'Path::Tiny';
-#    }
-#    else {
-#        requires 'Alien::Autotools';
-#    };
 };
 
 on 'test' => sub {
