@@ -1,6 +1,11 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Update documentation and build to use Alien::Base::Wrapper
+    This handles edge cases of prereqs that we didn't get manually
+    prior to this update
+  - Bump prereq to Alien::Build v2.11 to get Probe::Vcpkg
+  - Move testing phase to the correct place for the library on non-Windows
 
 1.012     2019-08-31
   - Update to the libuv v1.31.0 release
